# XYUnionAuth

./: Dockerfile  README.md  example.env  manage.py  pyproject.toml
XYUnionAuth/: asgi.py  settings.py  urls.py  wsgi.py
XYUnionAuth/utils/: __init__.py
XYUnionAuth/views/: permissions.py  user.py
